Added options for cross-compile.

--- a/cmd/reportlogger/Makefile
+++ b/cmd/reportlogger/Makefile
@@ -3,5 +3,18 @@
 BUILD_DATE = $(shell date -u '+%Y-%m-%d_%H:%M:%S')
 BUILD_DISTRO = $(shell lsb_release -sd)
 
-all:
-	go build -o reportlogger -ldflags "-X main.ApplicationBuildDate $(BUILD_DATE) -X main.ApplicationBuildDistro '$(BUILD_DISTRO)'"
+all: build
+
+raspberry: export GOOS=linux
+raspberry: export GOARCH=arm
+raspberry: export GOARM=6
+raspberry: build
+
+raspberry2: export GOOS=linux
+raspberry2: export GOARCH=arm
+raspberry2: export GOARM=7
+raspberry2: build
+
+build:
+	go build -o reportlogger -ldflags '-X "main.ApplicationBuildDate=$(BUILD_DATE)" -X "main.ApplicationBuildDistro=$(BUILD_DISTRO)"'
+	file reportlogger
