--- a/support/jenkins/Jenkinsfile
+++ b/support/jenkins/Jenkinsfile
@@ -63,7 +63,7 @@ def buildStuff()
 	// stage('Echo GOPATH')
 	sh 'echo GOPATH:$GOPATH'
 	// stage('Build and install')
-	dir('src/github.com/thinnect/go-reportreceiver/cmd')
+	dir('cmd')
 	{
 		sh './build-deb.sh'
 		sh 'dpkg -i mist-reportlogger*.deb'
@@ -72,7 +72,7 @@ def buildStuff()
 	sh 'reportlogger -V'
 
 	// Publish artifacts
-	dir('src/github.com/thinnect/go-reportreceiver/cmd')
+	dir('cmd')
 	{
 		sh \
 			"""#!/usr/bin/env bash
